--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,13 +9,15 @@ services:
     image: coder:local
     container_name: coder
     #network_mode: host
+    ports:
+      - 8080:8080
     #environment:
       #- TZ=Europe/London
       #DOCKER_USER: ${CURRENT_UID} # Please run as follows CURRENT_UID=$(id -u):$(id -g) docker-compose up
-    user: ${CURRENT_UID} # Please run as follows CURRENT_UID=$(id -u):$(id -g) docker-compose up
+    #user: ${CURRENT_UID} # Please run as follows CURRENT_UID=$(id -u):$(id -g) docker-compose up
     volumes:
     #- ./.config:/root/.config
     - ./data/extensions:/home/coder/.local/share/code-server/extensions
     - ./data/settings.json:/home/coder/.local/share/code-server/User/settings.json
     - ${PWD}:/home/coder/projects
-    command: ['--auth', 'password']
+    #command: ['--auth', 'password']
