--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
     image: coder:local
     container_name: coder
     #network_mode: host
+    privileged: true
     ports:
       - 8080:8080
     #environment:
