--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,8 +8,10 @@ services:
       dockerfile: Dockerfile
     image: coder:local
     container_name: coder
+    security_opt:
+      - seccomp:unconfined
+      - apparmor:unconfined
     #network_mode: host
-    privileged: true
     ports:
       - 8080:8080
     #environment:
