--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.8'
 
 services:
   # Coder
@@ -8,10 +8,12 @@ services:
       dockerfile: Dockerfile
     image: coder:local
     container_name: coder
+ #   privileged: true
     security_opt:
       - seccomp:unconfined
       - apparmor:unconfined
     #network_mode: host
+#    pid: host
     ports:
       - 8080:8080
     #environment:
@@ -23,4 +25,8 @@ services:
     - ./data/extensions:/home/coder/.local/share/code-server/extensions
     - ./data/settings.json:/home/coder/.local/share/code-server/User/settings.json
     - ${PWD}:/home/coder/projects
+#    - '/:/host:ro'
+#    - '/proc:/host/proc:ro'
+#    - '/sys:/host/sys:ro'
+    - '/:/rootfs:ro,rslave'
     #command: ['--auth', 'password']
